# melody.web

./: .gitignore  Cargo.toml  README.md  build.rs  deno.json  pyproject.toml  tailwind.config.ts
melody/web/: __init__.py  constants.py  core.py  main.py  tailwind.config.js
melody/web/modules/: __init__.py  docs.py  email.py  github.py  home.py  keys.py  redirect.py
melody/web/static/css/: output.css
melody/web/templates/: base.html  home.html
src/: app.rs  date.rs  lib.rs  main.rs
src/routes/: email.rs  mod.rs  projects.rs
src/templates/: base.rs  index.rs
static/css/: input.css  output.css
