[package]
name = "melody-web"
version = "0.1.0"
authors = ["MelodyKit <hello@melodykit.app>"]
edition = "2021"
readme = "README.md"
repository = "https://github.com/MelodyKit/melody.web"
license = "MIT"
publish = false

[dependencies.axum]
version = "0.8.1"

[dependencies.bon]
version = "3.3.2"

[dependencies.chrono]
version = "0.4.39"

[dependencies.clap]
version = "4.5.28"
features = ["derive"]

[dependencies.maud]
version = "0.27.0"
features = ["axum"]

[dependencies.miette]
version = "7.5.0"
features = ["fancy"]

[dependencies.serde]
version = "1.0.217"
features = ["derive"]

[dependencies.thiserror]
version = "2.0.11"

[dependencies.tokio]
version = "1.43.0"
features = ["full"]

[dependencies.tower]
version = "0.5.2"

[dependencies.tower-http]
version = "0.6.2"
features = ["full"]
